# DesignPatterns

AbstractFactory/: CMakeLists.txt
AbstractFactory/include/: Factory.h  Producet.h
AbstractFactory/src/: main.cpp
FactoryMethod/: CMakeLists.txt
FactoryMethod/include/: Factory.h  Producet.h
FactoryMethod/src/: main.cpp
SimpleFactory/include/: Factory.h
SimpleFactory/src/: CMakeLists.txt  main.cpp
SimpleFactory/src/include/: ConsumeProduct.h  Producet.h
